--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprende a Armar tu Dieta Desde Cero</title>
+    <title>Aprende a Armar tu Dieta Desde Cero | Barcia Coach</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">Tu Logotipo</div>
+        <div class="logo">Barcia Coach</div>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
@@ -34,45 +34,44 @@
             <li>Introducción a los macronutrientes</li>
             <li>Cálculo de necesidades calóricas</li>
             <li>Planificación de comidas</li>
-            <li>Ejemplo de todo lo aprendido en la clase</li>
+            <li>Ejemplos de comidas balanceadas</li>
         </ul>
     </section>
 
     <section id="testimonios">
         <h2>Testimonios de Nuestros Clientes</h2>
-        <blockquote>"Esta clase cambió mi forma de planificar dietas tanto para mis clientes, como para mi" - Cliente Satisfecho</blockquote>
-        <blockquote>"Ahora sé cómo alimentarme mejor y cuantas kcal exactas debo comer." - Otro Cliente</blockquote>
+        <blockquote>"Esta clase cambió mi forma de recetar dietas a mis clientes e incluso mi propia dieta" - Cliente Satisfecho</blockquote>
+        <blockquote>"Ahora sé cómo alimentarme mejor.Muchisimas gracias, muy recomendado" - Otro Cliente</blockquote>
     </section>
 
     <section id="comprar">
         <h2>Compra Tu Clase Ahora</h2>
         <p>Descripción breve del proceso de compra y lo que recibirán al comprar la clase.</p>
         <p>Precio: $XX.XX</p>
-        <a href="enlace-a-compra" class="btn">Compra Ahora</a>
+        <a href="https://youtu.be/1wlsbojGgPQ" class="btn">Compra Ahora</a>
     </section>
 
     <section id="sobremi">
         <h2>Sobre Mí</h2>
-        <p>Soy Personal Trainer, Instructor de musculacion Internacional y Certificado en Nutricion y suplementacion. Mi objetivo es llegar a grandes masas y lograr cambiar la percepcion sobre salud y Fitness.</p>
-        <img src="foto.jpg" alt="Tu Foto">
+        <p>Hola, soy Barcia Coach, Personal Trainer, Instructor de musculación internacional y certificado en nutrición y suplementación internacional. Mi misión es ayudarte a alcanzar tus objetivos de salud y fitness a través de una alimentación adecuada y entrenamientos efectivos.</p>
+        <img src="foto.jpg" alt="Barcia Coach">
     </section>
 
     <section id="contacto">
         <h2>Contacto</h2>
         <form action="submit-form" method="POST">
-            <input type="text" name="nombre" placeholder="Barcia Coach">
-            <input type="email" name="email" placeholder="franbarcia17@gmail.com">
+            <input type="text" name="nombre" placeholder="Tu Nombre">
+            <input type="email" name="email" placeholder="Tu Email">
             <textarea name="mensaje" placeholder="Tu Mensaje"></textarea>
             <button type="submit">Enviar</button>
         </form>
         <p>Email: tuemail@example.com</p>
+        <p>Instagram: <a href="https://instagram.com/barcoachgym">@barcoachgym</a></p>
     </section>
 
     <footer>
-        <p>© 2024 Tu Nombre. Todos los derechos reservados.</p>
+        <p>© 2024 Barcia Coach. Todos los derechos reservados.</p>
         <div class="redes-sociales">
-          
-            
             <a href="https://instagram.com/barcoachgym">Instagram</a>
         </div>
     </footer>
